Replacing usages of `Collector.toList()` with `Stream#toList()`