@@ -322,7 +322,7 @@ public class GitRepoController {
         return ResponseEntity.ok(
                 languageService.getRanked().stream()
                         .map(Language::getName)
-                        .collect(Collectors.toList())
+                        .toList()
         );
     }
 
@@ -332,7 +332,7 @@ public class GitRepoController {
         return ResponseEntity.ok(
                 licenseService.getAll().stream()
                         .map(License::getName)
-                        .collect(Collectors.toList())
+                        .toList()
         );
     }
 
